jj: make "clean" alias safer
Without triggering a snapshot first, new files that jj hasn't seen yet
(and are therefore not marked with intent-to-add) would be deleted by
git.

--- a/dot_config/jj/config.toml
+++ b/dot_config/jj/config.toml
@@ -69,7 +69,7 @@ track-mine = ["bookmark", "track", "regex:(remo|senekor|senk)[/-].*@.*"]
 track-all = ["bookmark", "track", "glob:*@*"] # for personal repos where I don't use the prefix
 
 # [scripts]
-clean = ["util", "exec", "--", "git", "clean", "-e", ".jj", "-xdf", ":/"]
+clean = ["util", "exec", "--", "sh", "-c", "set -e ; jj debug snapshot ; git clean -e .jj -xdf :/", ""]
 clone = ["util", "exec", "--", "sh", "-c", "~/.config/jj/scripts/clone.nu $@", ""]
 tnp = ["util", "exec", "--", "bash", "-c", "set -e ; jj tug ; jj git push --revisions @-"] # tug'n'push
 cob = ["util", "exec", "--", "bash", "-c", """
