jj: disable pager on default log command
I used to run into a problem where I would run `jj` just to confirm my
assumption of where I'm at, but I would already start typing the next
command as soon as I hit enter. When there is keyboard input while jj
hasn't finished printing it's output yet, the built-in pager activates
its TUI mode. This was annoying, because it intercepted my next command
I wanted to type.

I tried to solve this problem upstream. After a quick look at the code,
I decided it's not easily possible.

Adding the `--no-pager` flag to the default command should be enough.
It's pretty much the only command I run where I immediately start typing
the next one without waiting for output myself.

--- a/dot_config/jj/config.toml
+++ b/dot_config/jj/config.toml
@@ -24,7 +24,7 @@ sign-on-push = true
 colocate = true
 
 [ui]
-default-command = ["log", "--template", "custom_log_oneline"]
+default-command = ["log", "--template", "custom_log_oneline", "--no-pager"]
 diff-editor = ":builtin"  # suppress hint about this config option
 # show-cryptographic-signatures = true # sometimes very slow for unknown signatures
 
