jj: add aliases to squash interactively

--- a/dot_config/jj/config.toml
+++ b/dot_config/jj/config.toml
@@ -60,7 +60,9 @@ r  = ["rebase"]
 rd = ["rebase", "--destination"]
 s  = ["show"]
 q  = ["squash"]
+qi = ["squash", "--interactive"]
 qt = ["squash", "--to"]
+qit= ["squash", "--interactive", "--to"]
 
 tug = ["bookmark", "move", "--from", "heads(::@- & bookmarks())", "--to", "@-"]
 yolo = ["config", "set", "--repo", "revset-aliases.'immutable_heads()'", "root()"]
