rust-analyzer: don't use nightly rustfmt
It's too aggressive for existing projects that don't use granularity
"item" yet. I can always run `cargo +nightly fmt` manually if I want to
change that. (and add a project-specific rust-analyzer.toml file with
the granularity setting)

--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -42,7 +42,8 @@ language-servers = ["tinymist", "typos"]
 config.cargo.targetDir = true
 config.check.command = "clippy"
 config.imports.granularity.group = "item"
-config.rustfmt.extraArgs = ["+nightly"]
+# too aggressive for existing projects without nightly formatting
+# config.rustfmt.extraArgs = ["+nightly"]
 
 [language-server.deno-lsp]
 command = "deno"
