jj: add alias for temporary workspaces

--- a/dot_config/jj/config.toml
+++ b/dot_config/jj/config.toml
@@ -121,6 +121,41 @@ jj rebase \
     --after "fork_point(@---)"
 """, "jj emm"] # extend mega-merge
 
+wt = ["util", "exec", "--", "bash", "-c", """
+set -eu
+
+if test -z ${1+x} ; then
+  name=tw-$(tr --delete --complement a-z < /dev/urandom | head --bytes 8)
+else
+  name=$1
+fi
+
+path=/tmp/jj-workspaces/$name
+mkdir --parents $(dirname $path)
+jj workspace add $path --quiet
+
+echo "# To enter and clean up the temporary workspace automatically,"
+echo "# source the output of this script: 'jj tw | source'"
+echo "cd $path"
+echo "trap 'jj wtd $name' EXIT"
+""", "jj tw"] # workspace temporary
+wtd = ["util", "exec", "--", "bash", "-c", """
+set -euo pipefail
+
+name=$1
+path=/tmp/jj-workspaces/$name
+cd $path
+jj workspace update-stale &> /dev/null # just in case
+jj workspace forget $name
+rm -rf $path
+""", "jj wtd"] # workspace temporary delete
+wtr = ["util", "exec", "--", "bash", "-c", """
+set -euo pipefail
+
+eval "$(jj wt)"
+"$@"
+""", "jj wtr"] # workspace temporary run
+
 [signing]
 behavior = "drop"
 backend = "ssh"
