niri: add desktop entry for dynamic output scale configuration
This is useful when using outputs on a one-off basis, e.g. beamers when
giving a presentation.

--- a/dot_local/share/applications/wl-mirror.desktop
+++ b/dot_local/share/applications/wl-mirror.desktop
@@ -2,7 +2,7 @@
 Name=wl-mirror
 
 Comment=Mirrors a wayland output to a window
-Keywords=Mirror,Output
+Keywords=Mirror,Output,Monitor,Display
 
 Type=Application
 Icon=utilities-terminal
